tests/snapshots/integration__bind_env__bind_env_symbols_argv_wins.snap
---
source: tests/bind_env.rs
assertion_line: 220
expression: "format! (r#\"\n# OUTPUT\n{output}\n\n# BUILD_OUTPUT\n{build_output}\n\"#)"
---

# OUTPUT
argc__args=([0]="bind-envs" [1]="symbols" [2]="+info")
argc__fn=symbols
argc__positionals=()
argc_level=info
symbols


# BUILD_OUTPUT
argc__args=([0]="prog" [1]="symbols" [2]="+info")
argc__fn=symbols
argc__positionals=([0]="+info")
symbols +info
