tests/snapshots/integration__bind_env__bind_env_symbols_invalid.snap
---
source: tests/bind_env.rs
assertion_line: 227
expression: "format! (r#\"\n# OUTPUT\n{output}\n\n# BUILD_OUTPUT\n{build_output}\n\"#)"
---

# OUTPUT
error: invalid value `bogus` for `+<LEVEL>`
  [possible values: trace, debug, info]


# BUILD_OUTPUT
argc__args=([0]="prog" [1]="symbols")
argc__fn=symbols
argc__positionals=()
symbols
